Upgrade to Junit 5 and AssertJ.